<resources>
    <string name="app_name">All_Android</string>
    <string name="prev">Previous</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="next">Next</string>
    <string name="icon">Icon</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="plus">+</string>
    <string name="subtract">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="first">First</string>
    <string name="way">Way</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="password">Password</string>
    <string name="remember_for_30_days">Remember for 30 days</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="submit">Submit</string>
    <string name="button">Button</string>
    <string name="by_default">By Default</string>
    <string name="simple_garvity_toast">Simple Garvity Toast</string>
    <string name="nested_toast">Nested toast</string>
    <string name="one">ONE</string>
    <string name="two">TWO</string>
    <string name="three">THREE</string>
    <string name="truth">Truth Quote</string>
    <string name="quote">Uski Yaad me pi li pesab fir de tatti de sharab</string>
    <string name="enter_weight_in_kilogram">Enter weight in kilogram</string>
    <string name="enter_height_in_meters">Enter height in meters</string>
    <string name="contact">Contact</string>
    <string name="contact_number">Contact Number</string>
    <string name="add_contact">Add Contact</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_contact">Enter Contact</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="OpenDrawer">Open Navigation Drawer</string>
    <string name="CloseDrawer">Close Navigation Drawer</string>
</resources>