<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Layout.RelativeLayouts">

    <TextView
        android:id="@+id/a"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/orange"
        android:gravity="center"
        android:text="@string/one"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/b"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/a"
        android:background="@color/pink"
        android:gravity="center"
        android:text="@string/two"
        android:textColor="#3E2723"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/c"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/b"
        android:background="@color/dark_blue"
        android:gravity="center"
        android:text="@string/three"
        android:textColor="#2979FF"
        android:textSize="30sp" />
</RelativeLayout>