<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Toasty">

    <Button
        android:id="@+id/bydefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:height="100dp"
        android:text="@string/by_default"
        android:textAllCaps="false"
        android:textSize="24sp" />

    <Button
        android:id="@+id/simpleGravity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:height="100dp"
        android:text="@string/simple_garvity_toast"
        android:textAllCaps="false"
        android:textSize="24sp" />

    <Button
        android:id="@+id/newstedToast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:height="100dp"
        android:text="@string/nested_toast"
        android:textAllCaps="false"
        android:textSize="24sp" />

</LinearLayout>