<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"

            app:cardCornerRadius="@dimen/_11sdp"
            app:cardUseCompatPadding="true"
            android:layout_height="wrap_content">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_contact"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif"
                    android:textSize="@dimen/_32ssp"
            />
            <EditText
                    android:id="@+id/txtInputEditText_Name"
                    android:layout_width="match_parent"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:minHeight="48dp"
                    android:hint="@string/enter_name"
                    android:inputType="text"
                    android:layout_height="wrap_content"/>
            <EditText
                    android:id="@+id/txtInputEditText_Contact"
                    android:layout_width="match_parent"
                    android:minHeight="48dp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:hint="@string/enter_contact"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:inputType="number"
                    android:layout_height="wrap_content"/>
            <Button
                    android:id="@+id/submit_Details"
                    android:layout_width="wrap_content"
                    android:text="@string/submit"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>