<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".onClickListner">

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnFirst"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="205dp"
            android:layout_height="220dp"
            android:background="@color/orange"
            android:textSize="30sp"
            android:fontFamily="cursive"
            android:text="@string/first"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnWay"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="205dp"
            android:textSize="30sp"
            android:fontFamily="cursive"
            android:layout_height="220dp"
            android:background="@color/light_blue"
            android:text="@string/way"
            android:textColor="@color/white" />
    </LinearLayout>
    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtSecond"
            android:layout_width="205dp"
            android:layout_height="220dp"
            android:background="@color/purple_200"
            android:textSize="30sp"
            android:gravity="center"
            android:fontFamily="cursive"
            android:text="@string/second"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtWay1"
            android:layout_width="205dp"
            android:layout_height="220dp"
            android:fontFamily="cursive"
            android:background="@color/teal_700"
            android:textSize="30sp"
            android:gravity="center"
            android:text="@string/way"
            android:textColor="@color/white" />
    </LinearLayout>
    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtThird"
            android:layout_width="205dp"
            android:layout_height="220dp"
            android:background="@color/pink"
            android:textSize="30sp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/third"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtWay2"
            android:layout_width="205dp"
            android:layout_height="220dp"
            android:background="@color/dark_blue"
            android:textSize="30sp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/way"
            android:textColor="@color/white" />
    </LinearLayout>



</LinearLayout>