<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_11sdp"
            app:cardUseCompatPadding="true">

        <LinearLayout
                android:id="@+id/llRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                    android:layout_margin="@dimen/_10sdp"
                    android:id="@+id/contactImage"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/useravatar"/>
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">
            <TextView
                    android:id="@+id/contactName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                     android:text="@string/contact"

                    android:textStyle="bold"
                     android:textSize="@dimen/_30ssp"/>
            <TextView
                    android:id="@+id/contactNumber"
                    android:layout_width="match_parent"
                   android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/contact_number"
                    android:textSize="@dimen/_20ssp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>