<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BMICalc">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/weight"
            android:layout_marginEnd="116dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="84dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="112dp"
            android:minHeight="@dimen/_48sdp"
            android:hint="@string/enter_weight_in_kilogram" app:layout_constraintHorizontal_bias="1.0"
            />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/height"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="84dp"
            app:layout_constraintTop_toBottomOf="@+id/weight"
            android:layout_marginTop="28dp"
            android:hint="@string/enter_height_in_meters"
            android:minHeight="48dp"
            android:layout_marginEnd="116dp"
            app:layout_constraintEnd_toEndOf="parent"
            />
    <TextView
            android:text="Result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textresult"
            android:textSize="30sp"
            android:fontFamily="@font/halant_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/submitBtn"
            app:layout_constraintTop_toBottomOf="@+id/height"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintVertical_bias="0.854"/>
    <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submitBtn"
            app:layout_constraintTop_toBottomOf="@+id/weight"
            android:layout_marginTop="164dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>